# Ai-chatbot

./: .env  pyproject.toml
1-BasicChatbot/: 1-basicchatbot.ipynb
